[package]
name = "btf"
version = "0.3.2"
edition = "2021"
categories = ["parser-implementations", "data-structures"]
homepage = "https://github.com/arcjustin/btf"
keywords = ["linux", "btf", "bpf", "parser", "ebpf" ]
license = "MIT"
readme = "README.md"
repository = "https://github.com/arcjustin/btf"
description = "A library for parsing the BPF type format (BTF)."

[dependencies]
byteorder = "1.4.3"
thiserror = "1.0.37"

[dev-dependencies]
anyhow = "1.0.65"
